<resources>
    <string name="app_name">Stone Scissor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player1Hint">Player1 name</string>
    <string name="player2Name">Player2 Name</string>
    <string name="startBiuttonText">Start</string>
    <string name="payer1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="play">Play</string>
    <string name="score">score</string>
    <string name="winner">Winner</string>
    <string name="about">In this game,
        priority is given as per follows,
        1-> Paper
        2-> Scissor
        3-> Stone
        Both player got same image, then no points are credited for both
        If any one the player got high, then the player receive the points
    </string>
    <string name="about_title">About</string>
</resources>